# lucide_leptos

./: .gitignore  Cargo.toml  LICENSE  build.rs  package-lock.json  package.json
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/tailwind/: Cargo.toml  index.html  tailwind.config.js  tailwind.css
examples/tailwind/src/: main.rs
