workspace = { members = ["examples/basic", "examples/tailwind"] }

[package]
name = "leptos_lucide"
version = "0.0.0"
edition = "2021"
authors = ["Ben Brenkman"]
categories = ["WebAssembly", "Web Programming"]
keywords = ["wasm", "lucide", "icons", "leptos"]
description = "Leptos components for Lucide icons"
license = "ISC"
readme = "./README.md"
repository = "https://github.com/JustBrenkman/leptos_lucide"
include = ["/src"]

[lib]
path = "src/lib.rs"

[dependencies]
leptos = "0.6.9"

[build-dependencies]
convert_case = "0.5.0"
serde = "1.0.197"
serde_json = "1.0.114"

# Don't really like this approach, but it is better than 10 minute compile 
# times when every single icon is added
[features]
clipboard-pen = []
columns-4 = []
heart-off = []
circle-arrow-up = []
book-a = []
flag-triangle-right = []
heading-1 = []
chevrons-left = []
list = []
plug = []
receipt-indian-rupee = []
rotate-3d = []
scan-line = []
shield-ban = []
shield-half = []
circle-fading-plus = []
landmark = []
signal-zero = []
square-arrow-down = []
dice-5 = []
clock-1 = []
file-lock-2 = []
club = []
hospital = []
square-arrow-out-down-left = []
file-pie-chart = []
panel-bottom-open = []
move-up = []
plug-2 = []
filter = []
square-code = []
square-dashed-bottom-code = []
dollar-sign = []
anvil = []
square-function = []
timer-reset = []
ratio = []
square-arrow-out-up-right = []
bluetooth-connected = []
spade = []
brain-cog = []
calendar-range = []
square-arrow-right = []
calendar-minus-2 = []
cherry = []
message-circle-plus = []
message-circle-warning = []
move-up-left = []
parking-meter = []
home = []
croissant = []
folder-clock = []
arrow-right-from-line = []
book-text = []
folder-down = []
locate = []
message-circle-x = []
message-square-warning = []
milestone = []
plane-landing = []
scissors-line-dashed = []
share-2 = []
signal-medium = []
skip-back = []
fold-horizontal = []
earth-lock = []
git-fork = []
circle-parking = []
folder-tree = []
hand = []
badge-cent = []
mail-question = []
mic-off = []
satellite = []
spline = []
split = []
disc-album = []
star = []
thermometer-sun = []
twitter = []
video = []
nfc = []
plane-takeoff = []
footprints = []
file-x = []
waypoints = []
user-round-minus = []
russian-ruble = []
contact-round = []
droplets = []
laptop-minimal = []
message-circle-off = []
move-down = []
pen = []
square-mouse-pointer = []
bird = []
bold = []
chevrons-down-up = []
file-code = []
folder-output = []
copy = []
list-restart = []
clipboard-minus = []
locate-off = []
message-circle-more = []
cable-car = []
monitor-stop = []
sword = []
store = []
folder-x = []
diamond-percent = []
file-diff = []
layers = []
mail-minus = []
app-window = []
list-video = []
arrow-big-up = []
monitor-play = []
bookmark-plus = []
phone-off = []
receipt-japanese-yen = []
arrow-right-to-line = []
area-chart = []
scan-text = []
circle-alert = []
mail-search = []
user-round = []
circle-arrow-out-down-right = []
memory-stick = []
receipt-euro = []
heart = []
power-off = []
panel-top-dashed = []
archive-x = []
infinity = []
a-large-small = []
monitor-smartphone = []
cloud-moon-rain = []
bell-plus = []
panel-right-dashed = []
captions-off = []
pyramid = []
tally-2 = []
utensils-crossed = []
send-to-back = []
image-down = []
lamp-desk = []
signal = []
square-kanban = []
headset = []
cylinder = []
monitor-pause = []
airplay = []
arrow-up-right = []
bus-front = []
rectangle-horizontal = []
server-off = []
venetian-mask = []
arrow-up-from-line = []
calendar-plus-2 = []
sheet = []
component = []
slash = []
divide = []
variable = []
list-start = []
picture-in-picture = []
heater = []
glass-water = []
panel-top-close = []
fire-extinguisher = []
spray-can = []
square-radical = []
heading-3 = []
arrow-left-from-line = []
arrow-big-down = []
monitor-speaker = []
package-search = []
shopping-cart = []
square-arrow-down-right = []
radio-receiver = []
shield = []
arrow-big-left = []
anchor = []
badge-info = []
credit-card = []
captions = []
file-spreadsheet = []
book-up-2 = []
cloud = []
gallery-horizontal = []
history = []
square-check = []
square-sigma = []
smartphone-charging = []
bell-dot = []
file-minus = []
octagon = []
message-square-heart = []
brackets = []
badge-minus = []
circle-chevron-left = []
undo-dot = []
warehouse = []
projector = []
eye = []
corner-left-up = []
trash-2 = []
square-divide = []
coffee = []
handshake = []
search-code = []
minimize-2 = []
users = []
table-cells-merge = []
haze = []
volume-1 = []
arrow-big-right-dash = []
frame = []
wind = []
inspection-panel = []
martini = []
grip-vertical = []
align-justify = []
file-symlink = []
indent-decrease = []
notepad-text-dashed = []
group = []
phone-missed = []
trello = []
braces = []
file-line-chart = []
university = []
copy-slash = []
user-search = []
utensils = []
sailboat = []
bell-electric = []
contrast = []
panel-left = []
frown = []
pc-case = []
clock-11 = []
git-compare-arrows = []
paperclip = []
copyright = []
text-search = []
hexagon = []
file-bar-chart-2 = []
file-code-2 = []
eraser = []
sticky-note = []
tractor = []
building = []
flame-kindling = []
save-all = []
git-merge = []
camera-off = []
filter-x = []
cup-soda = []
ban = []
case-upper = []
paint-bucket = []
cigarette-off = []
circle-x = []
app-window-mac = []
dribbble = []
router = []
square-arrow-left = []
screen-share = []
square-scissors = []
toggle-right = []
refresh-cw-off = []
unfold-horizontal = []
bell-off = []
train-front = []
arrow-left = []
database = []
key-round = []
fingerprint = []
framer = []
banana = []
shield-question = []
rectangle-ellipsis = []
square-parking = []
align-vertical-justify-center = []
blocks = []
cloud-upload = []
coins = []
refresh-cw = []
text = []
receipt = []
import = []
phone-forwarded = []
backpack = []
ellipsis = []
car-front = []
beef = []
clock-9 = []
shield-minus = []
align-end-vertical = []
wheat = []
bookmark-check = []
ribbon = []
ear = []
bean = []
undo-2 = []
mailbox = []
unfold-vertical = []
square-chevron-down = []
volume-2 = []
turtle = []
arrow-down-1-0 = []
file-input = []
align-vertical-distribute-end = []
move-vertical = []
badge-pound-sterling = []
notebook = []
scan = []
satellite-dish = []
stamp = []
sunset = []
hard-drive-upload = []
cookie = []
boxes = []
navigation-off = []
step-forward = []
waves = []
popcorn = []
shirt = []
lamp = []
badge-check = []
bed = []
align-horizontal-space-between = []
pizza = []
globe-lock = []
sparkles = []
briefcase-business = []
user-plus = []
triangle = []
cloudy = []
text-cursor = []
clipboard-list = []
octagon-pause = []
radar = []
flask-round = []
message-square-code = []
pin-off = []
mails = []
ship-wheel = []
book-up = []
search-check = []
swiss-franc = []
activity = []
webcam = []
ticket-x = []
flashlight = []
hard-drive = []
lock-keyhole-open = []
file-audio-2 = []
music-3 = []
square-dashed-bottom = []
calculator = []
message-square-more = []
files = []
option = []
bell = []
git-graph = []
user-x = []
scale = []
cpu = []
between-vertical-start = []
clock-7 = []
move-diagonal = []
alarm-clock-off = []
git-pull-request-create = []
ligature = []
smile = []
notepad-text = []
pound-sterling = []
dumbbell = []
merge = []
move-down-right = []
truck = []
log-in = []
gantt-chart = []
refrigerator = []
cast = []
panel-top-open = []
images = []
snail = []
square-arrow-out-down-right = []
folder-up = []
circle-check-big = []
settings-2 = []
bar-chart-horizontal-big = []
grid-3x3 = []
maximize-2 = []
cloud-fog = []
file-terminal = []
square-check-big = []
sun-moon = []
arrow-up-from-dot = []
book-key = []
wifi = []
videotape = []
church = []
popsicle = []
door-closed = []
list-collapse = []
clipboard = []
message-square-share = []
search = []
microwave = []
sun-snow = []
folder-git-2 = []
bug-off = []
concierge-bell = []
lock-open = []
map = []
cake-slice = []
piano = []
hourglass = []
asterisk = []
file-json-2 = []
bus = []
calendar-minus = []
chevron-first = []
file-heart = []
smartphone-nfc = []
square-user = []
zoom-out = []
droplet = []
circle-play = []
bluetooth = []
touchpad = []
move-horizontal = []
thumbs-down = []
folder-cog = []
arrow-down-right = []
square-arrow-out-up-left = []
square-gantt-chart = []
git-branch-plus = []
message-circle-code = []
arrows-up-from-line = []
radius = []
chevron-left = []
gallery-vertical-end = []
message-circle-dashed = []
badge-swiss-franc = []
heading-2 = []
bar-chart = []
creative-commons = []
figma = []
align-vertical-space-around = []
door-open = []
circle-divide = []
book-copy = []
refresh-ccw = []
square-activity = []
tablet = []
torus = []
book-down = []
trending-up = []
cake = []
briefcase-medical = []
check = []
maximize = []
square-chevron-up = []
bar-chart-3 = []
mouse-pointer-click = []
file-up = []
cable = []
repeat-1 = []
sigma = []
square-chevron-right = []
navigation-2-off = []
strikethrough = []
tally-3 = []
tent = []
webhook-off = []
flame = []
network = []
move-right = []
shield-ellipsis = []
align-vertical-distribute-start = []
align-center-vertical = []
archive-restore = []
circle-plus = []
plug-zap-2 = []
square-arrow-up = []
timer = []
layers-3 = []
square-equal = []
git-pull-request = []
heading-6 = []
lasso = []
loader-circle = []
command = []
inbox = []
pencil-line = []
swatch-book = []
bell-ring = []
arrow-big-up-dash = []
cone = []
dessert = []
bookmark-minus = []
folder-kanban = []
folder-minus = []
align-vertical-justify-end = []
message-circle = []
palette = []
list-checks = []
columns-2 = []
circle-chevron-down = []
tornado = []
beaker = []
circle = []
circle-arrow-right = []
drill = []
badge-percent = []
radio = []
align-horizontal-justify-center = []
lightbulb = []
roller-coaster = []
facebook = []
file-video = []
folder-sync = []
megaphone-off = []
badge-indian-rupee = []
receipt-cent = []
bug-play = []
image-up = []
earth = []
video-off = []
orbit = []
siren = []
square-dot = []
route = []
blend = []
wifi-off = []
book-marked = []
square-split-horizontal = []
ice-cream-cone = []
pen-tool = []
baby = []
bot-message-square = []
drum = []
panel-bottom-close = []
align-center = []
blinds = []
speech = []
align-vertical-space-between = []
library = []
server = []
square-arrow-up-left = []
person-standing = []
bluetooth-searching = []
sprout = []
file-volume-2 = []
mail-check = []
alarm-clock = []
circle-dot = []
microscope = []
square-pen = []
squirrel = []
table-columns-split = []
corner-up-left = []
sofa = []
cog = []
crop = []
music-4 = []
user-cog = []
square-menu = []
pause = []
folder-input = []
paint-roller = []
receipt-text = []
ticket-percent = []
drumstick = []
circle-slash = []
badge-euro = []
git-pull-request-arrow = []
zap = []
headphones = []
arrow-right-left = []
message-square-off = []
bug = []
pointer = []
arrow-down-left = []
arrow-up-to-line = []
calendar-heart = []
clipboard-copy = []
lasso-select = []
package-plus = []
dice-2 = []
percent = []
clipboard-x = []
folder = []
mountain = []
dock = []
monitor = []
pill = []
atom = []
euro = []
database-zap = []
folders = []
git-commit-horizontal = []
iteration-ccw = []
git-pull-request-create-arrow = []
mail-plus = []
mouse-pointer = []
candy-off = []
medal = []
remove-formatting = []
undo = []
usb = []
align-start-vertical = []
podcast = []
pentagon = []
align-horizontal-distribute-end = []
chevron-down = []
bath = []
dog = []
gallery-thumbnails = []
monitor-x = []
circle-off = []
phone-outgoing = []
search-x = []
barcode = []
party-popper = []
zap-off = []
align-center-horizontal = []
star-off = []
clock-4 = []
book-open-check = []
circle-user = []
phone-incoming = []
redo-2 = []
proportions = []
hash = []
replace-all = []
wallet-cards = []
moon-star = []
mail-x = []
salad = []
file-bar-chart = []
rows-3 = []
send-horizontal = []
cloud-cog = []
file-digit = []
reply = []
corner-down-right = []
circle-arrow-out-up-right = []
book-minus = []
bring-to-front = []
clover = []
languages = []
globe = []
link = []
rows-2 = []
wrap-text = []
candy = []
fullscreen = []
book = []
cuboid = []
map-pin = []
badge = []
monitor-down = []
file-key-2 = []
paw-print = []
printer = []
sunrise = []
keyboard-music = []
align-horizontal-justify-start = []
calendar-clock = []
gitlab = []
bitcoin = []
file-x-2 = []
align-vertical-justify-start = []
square-arrow-down-left = []
book-headphones = []
case-lower = []
clock-8 = []
book-user = []
grip-horizontal = []
cloud-drizzle = []
circle-chevron-up = []
badge-alert = []
keyboard = []
leaf = []
heart-handshake = []
package = []
redo = []
monitor-up = []
scissors = []
shopping-bag = []
hop-off = []
image = []
power = []
snowflake = []
a-arrow-down = []
square-user-round = []
tv-2 = []
arrow-down-to-dot = []
arrow-up-z-a = []
cannabis = []
mic-vocal = []
octagon-x = []
panels-top-left = []
book-plus = []
moon = []
tv = []
panels-left-bottom = []
test-tubes = []
file-plus-2 = []
package-minus = []
codesandbox = []
banknote = []
shrub = []
vegan = []
arrow-big-left-dash = []
box-select = []
book-image = []
scale-3d = []
signal-high = []
corner-up-right = []
gallery-vertical = []
disc = []
file-text = []
step-back = []
table = []
badge-help = []
voicemail = []
panel-right-open = []
file-lock = []
subscript = []
apple = []
rotate-ccw = []
glasses = []
refresh-ccw-dot = []
git-compare = []
badge-japanese-yen = []
dice-1 = []
paintbrush = []
panel-left-close = []
corner-down-left = []
indent-increase = []
chef-hat = []
plus = []
rectangle-vertical = []
flip-horizontal = []
unplug = []
citrus = []
flag = []
shrink = []
package-x = []
table-cells-split = []
linkedin = []
gavel = []
telescope = []
arrow-left-to-line = []
square-pi = []
lamp-ceiling = []
beer-off = []
git-commit-vertical = []
message-square = []
clock-2 = []
arrow-big-down-dash = []
radio-tower = []
tally-1 = []
tangent = []
cooking-pot = []
arrow-down-from-line = []
corner-right-down = []
square-play = []
candy-cane = []
file-volume = []
baseline = []
flask-conical = []
bed-double = []
folder-root = []
folder-check = []
folder-search = []
monitor-off = []
phone = []
bluetooth-off = []
alarm-clock-check = []
brain-circuit = []
rotate-cw-square = []
bike = []
file-music = []
ruler = []
folder-pen = []
circle-user-round = []
megaphone = []
thumbs-up = []
tree-palm = []
ungroup = []
user-round-search = []
zoom-in = []
washing-machine = []
book-heart = []
camera = []
file-plus = []
circle-minus = []
combine = []
contact = []
badge-x = []
scan-search = []
square-parking-off = []
terminal = []
user-check = []
layout-panel-left = []
flashlight-off = []
flip-horizontal-2 = []
shield-plus = []
caravan = []
codepen = []
layout-dashboard = []
carrot = []
stretch-vertical = []
diameter = []
file-check = []
target = []
book-type = []
calendar-check-2 = []
book-audio = []
clipboard-pen-line = []
line-chart = []
dot = []
square-plus = []
air-vent = []
accessibility = []
bookmark-x = []
git-pull-request-closed = []
search-slash = []
superscript = []
between-horizontal-start = []
file-scan = []
cassette-tape = []
gamepad = []
code = []
users-round = []
message-square-quote = []
flask-conical-off = []
panel-left-open = []
file = []
hand-coins = []
reply-all = []
nut-off = []
mail-warning = []
settings = []
view = []
image-minus = []
rotate-ccw-square = []
switch-camera = []
file-video-2 = []
notebook-pen = []
traffic-cone = []
construction = []
dice-6 = []
square = []
brick-wall = []
clock-5 = []
external-link = []
copy-x = []
key-square = []
crown = []
square-library = []
test-tube = []
message-square-diff = []
train-track = []
server-cog = []
badge-dollar-sign = []
calendar-search = []
pointer-off = []
heart-crack = []
rabbit = []
gem = []
layout-grid = []
circle-check = []
clock-3 = []
equal-not = []
circle-stop = []
scatter-chart = []
stethoscope = []
image-off = []
github = []
battery-charging = []
highlighter = []
lock = []
calendar-plus = []
receipt-swiss-franc = []
bomb = []
fold-vertical = []
workflow = []
square-bottom-dashed-scissors = []
arrow-down-wide-narrow = []
fuel = []
cctv = []
file-type-2 = []
rewind = []
lollipop = []
briefcase = []
scaling = []
soup = []
link-2 = []
ticket-check = []
arrow-down-0-1 = []
battery-medium = []
flip-vertical-2 = []
hop = []
trash = []
test-tube-diagonal = []
worm = []
instagram = []
vibrate = []
arrow-down-narrow-wide = []
code-xml = []
corner-right-up = []
flag-off = []
ghost = []
tablets = []
message-square-text = []
calendar-x = []
align-vertical-distribute-center = []
shapes = []
sliders-vertical = []
circle-power = []
copyleft = []
screen-share-off = []
cat = []
table-properties = []
box = []
circle-dashed = []
cloud-sun-rain = []
circle-arrow-out-down-left = []
fish = []
diff = []
grip = []
indian-rupee = []
scroll-text = []
scroll = []
shopping-basket = []
battery-warning = []
cloud-moon = []
axe = []
circle-percent = []
book-check = []
egg-off = []
flower = []
arrow-left-right = []
file-pen = []
gallery-horizontal-end = []
list-filter = []
wrench = []
eclipse = []
quote = []
text-select = []
lock-keyhole = []
square-dashed-kanban = []
pen-line = []
cross = []
shield-off = []
x = []
shield-x = []
folder-key = []
message-circle-reply = []
folder-plus = []
tally-5 = []
bar-chart-4 = []
book-open = []
tree-deciduous = []
land-plot = []
underline = []
slack = []
whole-word = []
flag-triangle-left = []
library-big = []
recycle = []
sparkle = []
align-horizontal-distribute-center = []
delete = []
dices = []
chevrons-right = []
luggage = []
list-x = []
calendar = []
music = []
nut = []
ticket-minus = []
fish-symbol = []
chevrons-down = []
upload = []
file-badge-2 = []
message-square-plus = []
cloud-lightning = []
layout-panel-top = []
grape = []
file-pen-line = []
focus = []
mic = []
bot = []
car-taxi-front = []
vault = []
move = []
egg = []
train-front-tunnel = []
shovel = []
lightbulb-off = []
clapperboard = []
bar-chart-horizontal = []
minus = []
panel-right-close = []
armchair = []
diamond = []
wine-off = []
circle-ellipsis = []
pin = []
arrow-up-wide-narrow = []
layout-list = []
chrome = []
text-cursor-input = []
ticket-slash = []
wallet = []
graduation-cap = []
spell-check = []
wheat-off = []
spell-check-2 = []
cloud-off = []
paintbrush-2 = []
battery = []
link-2-off = []
flip-vertical = []
bell-minus = []
list-todo = []
archive = []
file-warning = []
drama = []
text-quote = []
volume = []
eye-off = []
folder-open = []
panel-top = []
image-plus = []
radiation = []
list-minus = []
arrow-down-to-line = []
dna-off = []
fish-off = []
square-pilcrow = []
swords = []
thermometer = []
ticket = []
package-2 = []
lamp-floor = []
candlestick-chart = []
panels-right-bottom = []
rss = []
sliders-horizontal = []
cigarette = []
squircle = []
folder-lock = []
kanban = []
book-dashed = []
circle-slash-2 = []
trending-down = []
file-stack = []
biohazard = []
file-question = []
message-square-dashed = []
file-axis-3d = []
square-chevron-left = []
unlink = []
alarm-clock-plus = []
align-start-horizontal = []
columns-3 = []
square-dashed-mouse-pointer = []
bar-chart-2 = []
hdmi-port = []
triangle-alert = []
leafy-green = []
tally-4 = []
ambulance = []
file-key = []
align-horizontal-distribute-start = []
lamp-wall-up = []
file-type = []
a-arrow-up = []
piggy-bank = []
align-left = []
clock = []
alarm-smoke = []
disc-2 = []
notebook-tabs = []
rocking-chair = []
save = []
chevrons-left-right = []
clipboard-paste = []
chevrons-up-down = []
copy-minus = []
sun = []
audio-lines = []
tram-front = []
twitch = []
flower-2 = []
umbrella = []
joystick = []
list-tree = []
user-round-x = []
vibrate-off = []
ampersands = []
regex = []
calendar-check = []
alarm-clock-minus = []
message-circle-heart = []
align-horizontal-space-around = []
gauge = []
package-check = []
file-down = []
bed-single = []
download = []
folder-heart = []
git-pull-request-draft = []
donut = []
hand-helping = []
mail-open = []
ferris-wheel = []
plane = []
square-terminal = []
touchpad-off = []
grab = []
milk-off = []
pipette = []
folder-open-dot = []
bar-chart-big = []
bone = []
award = []
dna = []
file-minus-2 = []
circle-arrow-down = []
git-branch = []
music-2 = []
arrow-down-z-a = []
ice-cream-bowl = []
ticket-plus = []
toy-brick = []
computer = []
egg-fried = []
monitor-check = []
server-crash = []
align-end-horizontal = []
arrow-right = []
receipt-russian-ruble = []
square-arrow-up-right = []
tent-tree = []
copy-plus = []
message-square-x = []
shell = []
clipboard-check = []
loader = []
tree-pine = []
square-asterisk = []
user-minus = []
list-end = []
wallet-minimal = []
crosshair = []
align-horizontal-justify-end = []
forklift = []
japanese-yen = []
heading-5 = []
lamp-wall-down = []
drafting-compass = []
pickaxe = []
square-power = []
smile-plus = []
mail = []
menu = []
forward = []
ear-off = []
mountain-snow = []
trees = []
wallpaper = []
heading-4 = []
layout-template = []
move-down-left = []
square-stack = []
circle-equal = []
check-check = []
hard-drive-download = []
circuit-board = []
currency = []
picture-in-picture-2 = []
clipboard-type = []
grid-2x2 = []
battery-low = []
badge-plus = []
copy-check = []
pencil-ruler = []
binary = []
expand = []
square-minus = []
tag = []
factory = []
wand-sparkles = []
file-cog = []
hotel = []
arrow-down = []
package-open = []
iteration-cw = []
plug-zap = []
slice = []
stretch-horizontal = []
ellipsis-vertical = []
hand-platter = []
user-round-check = []
calendar-fold = []
dice-4 = []
antenna = []
angry = []
arrow-down-a-z = []
file-image = []
hand-metal = []
cloud-snow = []
info = []
monitor-dot = []
book-lock = []
case-sensitive = []
pocket = []
route-off = []
scan-barcode = []
chevron-right = []
chevron-up = []
skull = []
user-round-cog = []
between-horizontal-end = []
annoyed = []
car = []
navigation = []
receipt-pound-sterling = []
smartphone = []
file-json = []
wand = []
rail-symbol = []
arrow-up-1-0 = []
unlink-2 = []
share = []
brush = []
file-search = []
user-round-plus = []
locate-fixed = []
volume-x = []
circle-gauge = []
cloud-rain-wind = []
file-box = []
rows-4 = []
bean-off = []
rotate-cw = []
italic = []
theater = []
file-clock = []
pilcrow = []
key = []
signpost-big = []
folder-symlink = []
align-right = []
circle-arrow-left = []
rat = []
panel-right = []
scan-face = []
cloud-sun = []
container = []
file-audio = []
list-plus = []
rocket = []
circle-pause = []
send = []
compass = []
wine = []
signpost = []
toggle-left = []
chevrons-up = []
user = []
circle-arrow-out-up-left = []
newspaper = []
arrow-up-a-z = []
book-open-text = []
presentation = []
star-half = []
message-circle-question = []
shield-alert = []
boom-box = []
move-diagonal-2 = []
folder-git = []
repeat-2 = []
building-2 = []
corner-left-down = []
calendar-x-2 = []
laptop = []
bookmark = []
beer = []
castle = []
tower-control = []
meh = []
parentheses = []
heading = []
webhook = []
message-square-dot = []
clock-12 = []
sticker = []
folder-closed = []
chevrons-right-left = []
navigation-2 = []
arrow-big-right = []
messages-square = []
file-archive = []
laugh = []
layers-2 = []
pocket-knife = []
hand-heart = []
thermometer-snowflake = []
arrow-up = []
map-pinned = []
puzzle = []
file-sliders = []
arrow-down-up = []
minimize = []
umbrella-off = []
cloud-download = []
hard-hat = []
radical = []
map-pin-off = []
circle-parking-off = []
gamepad-2 = []
phone-call = []
list-ordered = []
rainbow = []
syringe = []
shield-check = []
sun-medium = []
vote = []
fan = []
arrow-up-left = []
circle-dollar-sign = []
between-vertical-end = []
message-square-reply = []
redo-dot = []
signal-low = []
album = []
calendar-days = []
calendar-off = []
at-sign = []
folder-dot = []
panel-bottom = []
pencil = []
move-up-right = []
space = []
speaker = []
arrow-up-down = []
sandwich = []
chevron-last = []
shuffle = []
octagon-alert = []
square-x = []
timer-off = []
trophy = []
pi = []
move-3d = []
file-output = []
film = []
goal = []
notebook-text = []
axis-3d = []
baggage-claim = []
clock-6 = []
aperture = []
bolt = []
qr-code = []
clock-10 = []
scan-eye = []
hammer = []
separator-horizontal = []
square-split-vertical = []
weight = []
youtube = []
tablet-smartphone = []
disc-3 = []
file-badge = []
tags = []
gift = []
magnet = []
log-out = []
mouse-pointer-2 = []
mouse = []
list-music = []
badge-russian-ruble = []
circle-chevron-right = []
cloud-hail = []
file-search-2 = []
panel-bottom-dashed = []
heart-pulse = []
book-x = []
audio-waveform = []
folder-archive = []
file-check-2 = []
milk = []
pie-chart = []
replace = []
school = []
ship = []
dice-3 = []
move-left = []
skip-forward = []
play = []
shower-head = []
circle-help = []
cloud-rain = []
separator-vertical = []
ham = []
folder-search-2 = []
fence = []
square-m = []
square-slash = []
sun-dim = []
ampersand = []
arrow-up-0-1 = []
feather = []
table-2 = []
table-rows-split = []
triangle-right = []
arrow-up-narrow-wide = []
type = []
panel-left-dashed = []
utility-pole = []
watch = []
database-backup = []
square-percent = []
fast-forward = []
guitar = []
brain = []
clipboard-plus = []
battery-full = []
repeat = []
equal = []
circle-dot-dashed = []
life-buoy = []
